# Otus-architect-hw4

./: BurnFuelCommand.h  CMakeLists.txt  CheckFuelCommand.h  CommandException.h  HW2_Global.h  ICommand.h  IMoveable.h  IRotable.h  MacroCommand.h  MockMoveableObject.h  MockRotableObject.h  MockStaticObject.h  MoveCommand.h  RotateCommand.h  test.cpp
.github/workflows/: cmake.yml
